--- a/deploy/dockerfile/Dockerfile_go124
+++ b/deploy/dockerfile/Dockerfile_go124
@@ -55,4 +55,5 @@ RUN mkdir /home/coder/.bin && \
     echo "export PATH=\"\$HOME/.local/bin:\$PATH\"" | sudo tee -a /home/coder/.bashrc > /dev/null
 
 RUN code-server --install-extension bajdzis.vscode-database
+RUN code-server --install-extension shalldie.background
 RUN echo 'for f in /etc/profile.d/*.sh;do source $f;done' | sudo tee -a /home/coder/.bashrc > /dev/null
