--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,6 +3,9 @@ name: Java CI with Maven
 on:
   push:
     branches: [ "master" ]
+    paths-ignore:
+      - 'deploy/**'
+      - 'workflow/**'
 #  pull_request:
 #    branches: [ "master" ]
 
