--- a/deploy/dockerfile/Dockerfile_go124
+++ b/deploy/dockerfile/Dockerfile_go124
@@ -56,11 +56,13 @@ RUN mkdir /home/coder/.bin && \
 
 
 RUN code-server --install-extension bajdzis.vscode-database
-RUN code-server --install-extension shalldie.background
 RUN code-server --install-extension eamodio.gitlens
 RUN code-server --install-extension ms-ceintl.vscode-language-pack-zh-hans
 RUN code-server --install-extension vscodevim.vim
 RUN code-server --install-extension redhat.vscode-yaml
+
+RUN wget -q https://open-vsx.org/api/shalldie/background/2.0.3/file/shalldie.background-2.0.3.vsix
+RUN sudo code-server --install-extension shalldie.background-2.0.3.vsix
 
 COPY deploy/dockerfile/settings_json/settings-go.json /home/coder/.local/share/code-server/User/settings.json
 
