--- a/deploy/dockerfile/settings_json/settings-java.json
+++ b/deploy/dockerfile/settings_json/settings-java.json
@@ -9,22 +9,7 @@
         }
     ],
     "background.enabled": true,
-    "background.editor": {
-        "useFront": true,
-        "style": {
-            "background-position": "100% 100%",
-            "background-size": "auto",
-            "opacity": 0.6
-        },
-        "styles": [
-            {},
-            {},
-            {}
-        ],
-        "images": [],
-        "interval": 0,
-        "random": false
-    },
+    "background.customImages": [],
     "maven.terminal.useJavaHome": true,
     "maven.executable.path": "/home/coder/opt/apache-maven-3.6.3/bin/mvn",
     "files.exclude": {
