--- a/deploy/dockerfile/Dockerfile_java23
+++ b/deploy/dockerfile/Dockerfile_java23
@@ -9,6 +9,7 @@ RUN sudo apt-get update && sudo apt-get install --no-install-recommends -y \
     curl \
     unzip \
     vim \
+    tree \
     libarchive-tools \
     wget \
     bash-completion \
@@ -28,9 +29,12 @@ RUN code-server --install-extension redhat.java
 RUN code-server --install-extension bajdzis.vscode-database
 RUN code-server --install-extension eamodio.gitlens
 RUN code-server --install-extension ms-ceintl.vscode-language-pack-zh-hans
+RUN code-server --install-extension shalldie.background
 
 RUN wget -q https://open-vsx.org/api/shalldie/background/1.1.23/file/shalldie.background-1.1.23.vsix
-RUN sudo code-server --install-extension shalldie.background-1.1.23.vsix
+RUN pwd && tree
+# RUN wget -q https://open-vsx.org/api/shalldie/background/1.1.23/file/shalldie.background-1.1.23.vsix
+# RUN sudo code-server --install-extension shalldie.background-1.1.23.vsix
 
 # COPY deploy/extensions/vscode-spring-boot-1.17.0-RC.1.vsix vscode-spring-boot-1.17.0-RC.1.vsix
 # RUN sudo code-server --install-extension vscode-spring-boot-1.17.0-RC.1.vsix
