--- a/base/pom.xml
+++ b/base/pom.xml
@@ -7,7 +7,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>devops-base</artifactId>
+    <artifactId>base</artifactId>
     <packaging>jar</packaging>
 
     <name>devops-base</name>
