--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <module>devops-dependencies</module>
         <module>devops-common</module>
         <module>devops-core</module>
-        <module>devops-base</module>
+        <module>base</module>
     </modules>
 
     <properties>
