--- a/deploy/jenkins-agent/Dockerfile_java23
+++ b/deploy/jenkins-agent/Dockerfile_java23
@@ -4,6 +4,8 @@ FROM openjdk:23
 # 设置环境变量，避免交互提示
 ENV DEBIAN_FRONTEND=noninteractive
 
+RUN echo "当前基础镜像的操作系统信息：" && cat /etc/os-release
+
 # 更新包列表并安装必要的依赖
 RUN apt-get update && \
     apt-get install -y \
