--- a/deploy/jenkins-agent/Dockerfile_java23
+++ b/deploy/jenkins-agent/Dockerfile_java23
@@ -1,5 +1,5 @@
 # 基于 openjdk:23 镜像
-FROM openjdk:23-jdk-slim-buster
+FROM openjdk:24-ea-23-slim-bullseye
 
 # 设置环境变量，避免交互提示
 ENV DEBIAN_FRONTEND=noninteractive
