--- a/deploy/jenkins-agent/Dockerfile_java23
+++ b/deploy/jenkins-agent/Dockerfile_java23
@@ -30,6 +30,27 @@ RUN apt-get update && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
+RUN wget https://repo.maven.apache.org/maven2/org/apache/maven/apache-maven/3.6.3/apache-maven-3.6.3-bin.tar.gz -O maven.tar.gz
+
+# 下载并解压 Maven
+ENV MAVEN_VERSION 3.6.3
+ENV MAVEN_HOME /usr/local/maven
+RUN curl -fsSL https://repo.maven.apache.org/maven2/org/apache/maven/apache-maven/${MAVEN_VERSION}/apache-maven-${MAVEN_VERSION}-bin.tar.gz | tar xzf - -C /usr/local \
+    && mv /usr/local/apache-maven-${MAVEN_VERSION} $MAVEN_HOME \
+    && ln -s $MAVEN_HOME/bin/mvn /usr/bin/mvn
+RUN mvn -v
+
+# 下载并解压 Gradle
+ENV GRADLE_VERSION 8.5
+ENV GRADLE_HOME /usr/local/gradle
+RUN curl -fsSL https://services.gradle.org/distributions/gradle-${GRADLE_VERSION}-bin.zip -o gradle-bin.zip \
+    && unzip gradle-bin.zip -d /usr/local \
+    && mv /usr/local/gradle-${GRADLE_VERSION} $GRADLE_HOME \
+    && ln -s $GRADLE_HOME/bin/gradle /usr/bin/gradle \
+    && rm gradle-bin.zip \
+RUN gradle --version
+
+
 # 恢复默认环境变量
 ENV DEBIAN_FRONTEND=dialog
     
