--- a/deploy/jenkins-agent/Dockerfile_node20
+++ b/deploy/jenkins-agent/Dockerfile_node20
@@ -40,6 +40,24 @@ RUN node -v
 # 修改依赖源
 RUN npm config set registry https//registry.npm.taobao.org
 
+# 安装 kubectl
+RUN curl -fsSLo /usr/share/keyrings/kubernetes-archive-keyring.gpg https://packages.cloud.google.com/apt/doc/apt-key.gpg \
+    && echo "deb [signed-by=/usr/share/keyrings/kubernetes-archive-keyring.gpg] https://apt.kubernetes.io/ kubernetes-xenial main" | tee /etc/apt/sources.list.d/kubernetes.list \
+    && apt-get update \
+    && apt-get install -y kubectl \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
+
+# 安装 Helm
+RUN curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 \
+    && chmod 700 get_helm.sh \
+    && ./get_helm.sh \
+    && rm get_helm.sh
+
+# 查看 kubectl 和 Helm 版本
+RUN kubectl version --client
+RUN helm version
+
 # 恢复默认环境变量
 ENV DEBIAN_FRONTEND=dialog
     
