--- a/deploy/jenkins-agent/Dockerfile_java23
+++ b/deploy/jenkins-agent/Dockerfile_java23
@@ -62,10 +62,7 @@ RUN curl -fsSL https://archive.apache.org/dist/ant/binaries/apache-ant-${ANT_VER
 RUN ant -version
 
 # 安装 kubectl
-RUN curl -fsSLo /usr/share/keyrings/kubernetes-archive-keyring.gpg https://packages.cloud.google.com/apt/doc/apt-key.gpg \
-    && echo "deb [signed-by=/usr/share/keyrings/kubernetes-archive-keyring.gpg] https://apt.kubernetes.io/ kubernetes-xenial main" | tee /etc/apt/sources.list.d/kubernetes.list \
-    && apt-get update \
-    && apt-get install -y kubectl \
+RUN apt-get install -y kubectl \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
