--- a/deploy/jenkins-agent/Dockerfile_node20
+++ b/deploy/jenkins-agent/Dockerfile_node20
@@ -41,10 +41,7 @@ RUN node -v
 RUN npm config set registry https//registry.npm.taobao.org
 
 # 安装 kubectl
-RUN curl -fsSLo /usr/share/keyrings/kubernetes-archive-keyring.gpg https://packages.cloud.google.com/apt/doc/apt-key.gpg \
-    && echo "deb [signed-by=/usr/share/keyrings/kubernetes-archive-keyring.gpg] https://apt.kubernetes.io/ kubernetes-xenial main" | tee /etc/apt/sources.list.d/kubernetes.list \
-    && apt-get update \
-    && apt-get install -y kubectl \
+RUN apt-get install -y kubectl \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
