--- a/deploy/jenkins-agent/Dockerfile_node20
+++ b/deploy/jenkins-agent/Dockerfile_node20
@@ -41,7 +41,14 @@ RUN node -v
 RUN npm config set registry https//registry.npm.taobao.org
 
 # 安装 kubectl
-RUN apt-get install -y kubectl \
+RUN mkdir -p -m 755 /etc/apt/keyrings \
+    && curl -fsSL https://pkgs.k8s.io/core:/stable:/v1.32/deb/Release.key | sudo gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg \
+    && chmod 644 /etc/apt/keyrings/kubernetes-apt-keyring.gpg \
+    && echo 'deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable:/v1.32/deb/ /' | sudo tee /etc/apt/sources.list.d/kubernetes.list \
+    && chmod 644 /etc/apt/sources.list.d/kubernetes.list \
+    && apt-get install -y apt-transport-https ca-certificates curl gnupg \
+    && apt-get update \
+    && apt-get install -y kubectl \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
