--- a/deploy/jenkins-agent/Dockerfile_java17
+++ b/deploy/jenkins-agent/Dockerfile_java17
@@ -36,6 +36,10 @@ RUN apt-get update && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
+# 安装 scout-cli
+RUN curl -fsSL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh -o install-scout.sh \
+    && sh install-scout.sh
+
 # 下载并解压 Maven
 ENV MAVEN_VERSION 3.6.3
 ENV MAVEN_HOME /usr/local/maven
