--- a/deploy/jenkins-agent/Dockerfile_node16
+++ b/deploy/jenkins-agent/Dockerfile_node16
@@ -36,6 +36,10 @@ RUN apt-get update && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
+# 安装 scout-cli
+RUN curl -fsSL https://raw.githubusercontent.com/docker/scout-cli/main/install.sh -o install-scout.sh \
+    && sh install-scout.sh
+
 RUN node -v
 
 # 修改依赖源
